<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_takepic"
        android:title="@string/taking_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_recording"
        android:title="@string/recording_camera"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_focus"
        android:title="@string/camera_focus"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_resolution"
        android:title="@string/resolution"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>