<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:layoutDirection="rtl">

    <com.serenegiant.usb.widget.UVCCameraTextureView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/position_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_rec_voice" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/switch_rec_voice"
        android:layout_marginStart="13dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="13dp"
        android:alpha=".8"
        android:src="@drawable/volume_mute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/key_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_key"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/ic_key" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/black"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exit_layout"
            app:layout_constraintStart_toEndOf="@+id/key_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_home"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/black"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/exit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recording_layout"
            app:layout_constraintStart_toEndOf="@id/home_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/ic_cog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:text="@string/settings"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/black"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size"
            android:id="@+id/time"
            android:shadowDx="1"
            android:shadowDy="1"
            android:visibility="invisible"
            android:shadowRadius="2"
            app:layout_constraintBottom_toTopOf="@+id/recording_layout"
            app:layout_constraintStart_toStartOf="@id/recording_layout"
            app:layout_constraintEnd_toEndOf="@id/recording_layout"
            android:layout_marginBottom="5dp"
            android:shadowColor="@color/black" />


        <LinearLayout
            android:id="@+id/recording_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings_layout"
            app:layout_constraintStart_toEndOf="@+id/exit_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/record_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_recording" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:text="@string/record"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/screenshot_layout"
            app:layout_constraintStart_toEndOf="@+id/recording_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/ic_power" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/black"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/screenshot_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/camera_layout"
            app:layout_constraintStart_toEndOf="@+id/settings_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screenshot"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/screenshot_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/ic_change" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>